dodanie ignorowania folderu target i modyfikacja pom na java 15

--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,9 @@
   <groupId>pl.kacpergski.program1</groupId>
   <artifactId>hello-app</artifactId>
   <version>1</version>
+  <properties>
+    <maven.compiler.target>15</maven.compiler.target>
+    <maven.compiler.source>15</maven.compiler.source>
+  </properties>
+  
 </project>
